feat: password reset through email link

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
-DATABASE_ENGINE=sqlite  # Options: sqlite or postgres
-DATABASE_NAME=db.sqlite3  # For SQLite
-DATABASE_USER=your_username  # For PostgreSQL
-DATABASE_PASSWORD=your_password
+APP_NAME="Django Rest API"
+
+DATABASE_ENGINE=sqlite
+DATABASE_NAME=db.sqlite3
+DATABASE_USER=postgres
+DATABASE_PASSWORD=admin1234
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
+
+#mailpit SMTP
+MAIL_MAILER=smtp
+MAIL_HOST=127.0.0.1
+MAIL_PORT=1025
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+
