--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
+amqp==5.3.1
 asgiref==3.8.1
+billiard==4.2.1
+celery==5.4.0
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==5.1.4
 django-cors-headers==4.6.0
 django-decouple==2.1
+django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+kombu==5.4.2
+prompt_toolkit==3.0.48
 psycopg==3.2.3
 psycopg-binary==3.2.3
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+redis==5.2.1
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
-django_extensions
+tzdata==2024.2
+vine==5.1.0
+wcwidth==0.2.13
